# open-ticket-ai

./: .gitignore  AI_README.md  LICENSE_DE.md  LICENSE_EN.md  README.md  license_script.py  mkdocs.yml  netlify.toml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
cli/: activate.sh  collect-data.sh  deactivate.sh
docs/: README.md  _documentation_summaries.json  api_reference.json  application_class_diagram.puml  mvp-design.puml  mvp-software-design.puml  mvp.md  package-lock.json  package.json
docs/generated_docs/: developer-information.md
docs/original_source/: architecture.md  developer-information.md  get-started.md  index.md
docs/temp/: _BASE_PROMPT.md
docs/vitepress/: package-lock.json
docs/vitepress-atc-docs/: package-lock.json
docs/vitepress/docs-src/: de  (+2 more)
docs/vitepress_docs/: package-lock.json  package.json  tailwind.config.cjs
example_docs_output/: example_package.md
example_package/submodule/: __init__.py
experimental/: anonymize_data.py  email_extraction.py  test_anonymize_data.py
installation/otobo/: OTAI_OTOBO_webservice.yml  compose.yml  webservice-setup.sh
open_ticket_ai/: __init__.py  config.schema.json  config.yml  example-config.yml
open_ticket_ai/ce/: app.py  main.py
open_ticket_ai/experimental/: anonymize_data.py  email_extraction.py
open_ticket_ai/scripts/: __init__.py  doc_generation_facade.py  documentation_summary.py  license_script.py  readme_updater.py  update_file_path_comments.py
open_ticket_ai/src/: app.py  main.py  orchestrator.py
open_ticket_ai/tests/: conftest.py  otobo_adapter_test.py  test_orchestrator.py  test_ticket_system_adapter.py  test_unified_models.py
openai/: __init__.py
original_source/api/: main.md
otobo/: __init__.py
spacy/: __init__.py
src/: config.py  example-config.yml
tests/: conftest.py
tests/test_doc_generation/: test_plantuml_compile.py
tests/test_preparers/: test_data_preparer.py  test_subject_body_preparer.py
vitepress-atc-docs/: api.md  architecture.md  configuration.md  developer-information.md  features.md  get-started.md  hardware.md  index.md  installation.md  package.json
vitepress-atc-docs/concepts/: introduction-to-open-ticket-ai.md
vitepress-atc-docs/diagrams/: application_class_diagram.puml  mv-no-data-collection.puml  mvp-design.puml  mvp-software-design.puml  overview.puml
vitepress-atc-docs/guide/: hardware-requirements.md  installation-guide.md  running-classifier.md
vitepress-atc-docs/public/: openapi.json
vitepress-atc-docs/reference/: developer-guide.md
(+518 files in other folders)
