[project]
name = "open-ticket-ai"
version = "0.1.0"
description = "AI enhancements for open source ticket systems"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub~=0.33.0",
    "pydantic~=2.11.7",
    "pydantic_core",
    "typing_extensions",
    "spacy",
    "Faker",
    "phonenumbers",
    "pytest~=8.4.0",
    "pluggy",
    "pygments",
    "iniconfig",
    "PyYAML~=6.0.2",
    "transformers~=4.52.4",
    "injector~=0.22.0",
    "schedule~=1.2.2",
    "otobo>=1.0.1",
]
